--- a/Mirle.ASRS.WCS/View/MainForm.resx
+++ b/Mirle.ASRS.WCS/View/MainForm.resx
@@ -192,4 +192,116 @@
         +7AQG7ESO7EUW7E6ERAAOw==
 </value>
   </data>
+  <metadata name="mnuTransferCmd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>543, 17</value>
+  </metadata>
+  <data name="mnuTransferCmdCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAACu5JREFUaEPtWXlQ0+cW/bEmqWIgoChqN+3e2sXuq21tp5tLq7XLtH3a6VQ708Xa
+        VbFuVYqAAa0LuAwqIov6tNX2tWNduzzr8kSBKptAQGQJkAgECEnOOzeE+p4sQUD/8s7c+WX55cs5997v
+        3vMlymW7bJetczZr8ODJ00NCfg0NCdk/JyTkH66Xe8yiAwNHR/bu/a/IXr3yYvz8wlcHBvq53uq+zQwJ
+        iY644QbsHjUKu599FpFDhoAkQl1vd9uitdqJSwIDsXfECBx68UUkXHcdojWaHYsVReW6petG8KHhN96I
+        /ClTgOHD4bjtNmSNGYOwq67CvB4gEaPTjYsJCKjLGD0a9kmT0PTGG6ieMQMbb7oJi1Wqtd0iIeDnMxr5
+        U6fCfvPNqLn/fpjvuw+N11yDrOefR/jgwZjfv3+XSQh4fZ8+lrSRI2EdNw6m119H7cyZaOTVNG8eEq69
+        Fkt8fbtGogX8XwQvUbfccw8cZ87AUVaG6nvvRQPBZz/5JCK6SEKv041n6ViOPPwwGp57DpVjx8KWkQE0
+        NMASFgbrxImoWLAAG1iuS7291y5SFI3rox1bqqJ4Sc2HM+L5s2cDd96JBkbIUVgIVFUB1dWwZ2Whktmo
+        DQpC4aOPInrQIIQFB+tdS7g1fUDAFJZNY+aDD8Ly2GMwvvQSbOnpgMkElJcDRiMalyyB/b33YFq6FKm3
+        3IKlnp474rVaf9cS7Zt0m4UCfv58gCCtt98OZGcDpaVAfn6zMwt2RquCmajx94eBZRUzcCDC+/VzmwmJ
+        PEunKfPuu2Hh50qfeALW33////WLioDiYliZCcdHH8EcH49UYor18Yl0LdO+TQ8O/vdu2bCscduttwJp
+        ac2LnjgBnDzZ7PKYGbEfOYIylpbJzw8GEtX3798hCWfN+/vXZbIk63j/6UcegXXXLudaf6/d4jk5QG4u
+        mr75BvjqKxQsXIiVGs0J11Lt24y+fQ/sYerArmAjaxw61AxYiBw7ds7lOUvJ/scfOHPXXahSq5HLVhsd
+        HIyIoKBWJAT8IoI/MnQoznJvFTH61h9/bM5uW2tLSWVmwsZ9gDlzUBARgVVqtXsCMqQi2TazQkOBxx9H
+        I9uZ45dfmhc9cAD4889zLs/5hbbdu1HCeq7SaJB35ZVY1q8fIgIDF7iWVBbpdJOkVR7je2e56YseegiN
+        27Y1g21rTQkaH1vZkRyffw7j8uVIZXBWennNdS3Zsc1hVwmTVikkmOZ6biKHREsW37evtfN1B0uhkGVh
+        9PaGgaW0vG9fEHicPjDw68U6HTL5mpnDKp/lY926FTh4sO21fvsN2L8fDdOnw/HhhzDGxCCJMyfOwyMh
+        XlHULojubR5rOZwfzJo2DY5hw1AnmZAv3rsX+Pnn1r5nD2zffYcCAiz38EARN/dyAuamRSa9ulcv5F5/
+        PRq4IZ1A21pDMr1zJ+r5nVYOtUpu4iRmTcCzO/q6oHXehEQESRSyE9iZhRqWliM5GfjpJ+D771s7X7el
+        puIUN3+poiDniiuQQeCVXl7IZkYb4uKcANv87A8/ANu3o+6DD5yDzPz110juDvgWm08Sen65gRu7iQTM
+        jKJj3TpAaphgWzmzYEtIQA4JnyaJCvoJzol69nUB2OZntmwBNm1CzeTJsHAim1m6m7nZYz08NnQLfIuF
+        9e2rj7n6ahiY1gZORjMj7JBSSEoCCLaVp6TAtno1stltMrgX6tlBBGCb9yYmwsHrWa5d+8ILMH38MTZT
+        QhD89h4B32LhbI16DqucCRPQwI5QyazYv/0WECIrVwKrVp1zeb52LZoWLUJjeDggGWvrHpLEmjWofuUV
+        1FDlVrzzDpJDQhDn5XVhG7azFq7Ther5BXmMVD0zUkG3R0UBsbGAkDnf2f6wYkXb7y1b5vRKKRlOYyNV
+        aDI7VZy3d/dq3p1FkMRS1rSBEavltYyb3C7Dhu0OkZHNLqTac3mfmRE3clhWUa4YeQZI5gC86OBbLCIg
+        YMFyZqKIkTvLqJVwONlnzQKkXERDdeRsjeLlzzwD4x13wMxD0uYBA7DiUoEXm60onlH+/rHLGbVcSoIq
+        XoWE7bPPnGNftIvTOUmd3vKcJB28lpN4OWVKGZVoKqc2Rdr2OEXxcS1/aSw6IGAeZTHSKeZq2fJOsV3W
+        sZ7tHEL49FPgiy+AL79sdsoBec3Os0U9dX4+u0w1ZXoJpfhaCsE4X98E17KXxqJ4hqU8aMqkpqnnhC4g
+        +DxO3zwfH+QRUIHoHc6MIs4CAyezgdd8ttRc7pkcaQIcUKfYxcw8zJx5+mkkaLW2Vd7eXT7ZXZA5z7A6
+        XV2mCD1qnyKCdxKg59ApF5FBP0Y/Qj9MTyO5dAq9E5QX2SyZPBLM5zwp4FCse+opZ0NYz6m95mKTEPCM
+        viWNR0krDzMyac8ncJL+Fz2dnkY/6umJ4yoVMpmZk9RE2dwvQqCABAyuLFnYjQzyawRJxnt6XhwSzjOs
+        v7/lMLuHlQpVtE5PEChmiZWwGzW8+ioMHGiJzMQ6RelZEs4zrE7XmDF+PJpGjEAFS0IIlNA7InCUfsQN
+        gdMkIAeiMvmhgMOs9N13kcx7SaLTZ+wOTa/VjudhpCmTCtHODVdF8OUE5o6ARL+QfpoE0twRGD4c5Q88
+        ACMPRVbKiTKeA1J5P1tT9zIRo9WOI4G6DLY+B8/IJgKqpIvC7IiARN9ACV3q64sSgi9lWaR3hgDbahUz
+        3PT++yhl603hnkjsKgkBH+XnV3f4rbeAsWNRw8hXE5g7AhL9YgI39emDTVLPBFGi1aKC4DM5N9wRqGaD
+        MDPTtk8+QTEHYyrP2hdMQvq8tMqj1Od47TVYCP4sgbnLgERfol1BCb25d2/EqtXbV2o06xNJwsDXKqlm
+        s9wRGDkSZrbVGmYcc+fiNCf3P9l+NyrKgk5Na72//6glQUFIpy7Hm2+ikaDq6O4I5NLLGfUKDinZhCs0
+        GtE2XrLmKrU6dD0jWUTgJgLP4UCTadwRgVq2VsuYMU59VUYRuI0ZTFaUqU6QHVmURrNzD1sapkxBE0HV
+        090REBnhBE9JkcxrnErVSpit8fUN3cD9YOA9VdRBp+SU544Au14jHYsXI4/SJMnD4z+u5dq3SLU67bD8
+        LsQJaSUwdwSk0xiZ4moCSeG1LfAtFs9JmyibetgwmNg6C3kwkjnglgDBl1Oup3h5MdFuLNrPb04Cp6NJ
+        ZC+Pjh0RKKZXBQbCTEG3hWUXq1K5PcOuI4kUlpP0/bNsm0X8jnYJsHnI76PWjRuxj6qX+2C9a5n2LS4g
+        QBujVu/YKFGiNHYw3bUEej6BM/KcusZEQbZFJLFK1ekz7DoPD30qM1HGiV5DaV1CZdrWJm7iTGjksXM/
+        RSM70fEURRnqWqJjWzRokEb+XFjPeq1gK7OxVv+XQBm9lpvVyJaXzMiLHL7QM6wMqRSq12L2fQuPqJKR
+        vwmwfGUq17P2d7HEGPlfCX6g66OdM/lTQf5ckD8ZzNTxVsphmQNGuoVnYSMjlMzWKOA7G/nzTfp7Kkmc
+        ZsQbWOsV8vOkEJowwfljwC5mfwPBc/3+ro9cmAmJpSSRSvBmqUVe5d8ZI9tbEsumO+BbTEhs5ewoJwEr
+        23bdyy/DytLdz7KSyHcZfIs5Sfj47NhE4Kd44srnGXaT/PTRg2dYGVLbSCKPWT3z9tvYx5IlsfQtijLA
+        dUv3jKevPtykkZyqxzmUjq9Uqeb1FHgxruWVpCjT6AdZ6ydIKJ6Ph7jevmyX7bK1a4ryXzmn8nP/tS4x
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="mnuMiddleCmd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>772, 17</value>
+  </metadata>
+  <data name="mnuMiddleCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAACu5JREFUaEPtWXlQ0+cW/bEmqWIgoChqN+3e2sXuq21tp5tLq7XLtH3a6VQ708Xa
+        VbFuVYqAAa0LuAwqIov6tNX2tWNduzzr8kSBKptAQGQJkAgECEnOOzeE+p4sQUD/8s7c+WX55cs5997v
+        3vMlymW7bJetczZr8ODJ00NCfg0NCdk/JyTkH66Xe8yiAwNHR/bu/a/IXr3yYvz8wlcHBvq53uq+zQwJ
+        iY644QbsHjUKu599FpFDhoAkQl1vd9uitdqJSwIDsXfECBx68UUkXHcdojWaHYsVReW6petG8KHhN96I
+        /ClTgOHD4bjtNmSNGYOwq67CvB4gEaPTjYsJCKjLGD0a9kmT0PTGG6ieMQMbb7oJi1Wqtd0iIeDnMxr5
+        U6fCfvPNqLn/fpjvuw+N11yDrOefR/jgwZjfv3+XSQh4fZ8+lrSRI2EdNw6m119H7cyZaOTVNG8eEq69
+        Fkt8fbtGogX8XwQvUbfccw8cZ87AUVaG6nvvRQPBZz/5JCK6SEKv041n6ViOPPwwGp57DpVjx8KWkQE0
+        NMASFgbrxImoWLAAG1iuS7291y5SFI3rox1bqqJ4Sc2HM+L5s2cDd96JBkbIUVgIVFUB1dWwZ2Whktmo
+        DQpC4aOPInrQIIQFB+tdS7g1fUDAFJZNY+aDD8Ly2GMwvvQSbOnpgMkElJcDRiMalyyB/b33YFq6FKm3
+        3IKlnp474rVaf9cS7Zt0m4UCfv58gCCtt98OZGcDpaVAfn6zMwt2RquCmajx94eBZRUzcCDC+/VzmwmJ
+        PEunKfPuu2Hh50qfeALW33////WLioDiYliZCcdHH8EcH49UYor18Yl0LdO+TQ8O/vdu2bCscduttwJp
+        ac2LnjgBnDzZ7PKYGbEfOYIylpbJzw8GEtX3798hCWfN+/vXZbIk63j/6UcegXXXLudaf6/d4jk5QG4u
+        mr75BvjqKxQsXIiVGs0J11Lt24y+fQ/sYerArmAjaxw61AxYiBw7ds7lOUvJ/scfOHPXXahSq5HLVhsd
+        HIyIoKBWJAT8IoI/MnQoznJvFTH61h9/bM5uW2tLSWVmwsZ9gDlzUBARgVVqtXsCMqQi2TazQkOBxx9H
+        I9uZ45dfmhc9cAD4889zLs/5hbbdu1HCeq7SaJB35ZVY1q8fIgIDF7iWVBbpdJOkVR7je2e56YseegiN
+        27Y1g21rTQkaH1vZkRyffw7j8uVIZXBWennNdS3Zsc1hVwmTVikkmOZ6biKHREsW37evtfN1B0uhkGVh
+        9PaGgaW0vG9fEHicPjDw68U6HTL5mpnDKp/lY926FTh4sO21fvsN2L8fDdOnw/HhhzDGxCCJMyfOwyMh
+        XlHULojubR5rOZwfzJo2DY5hw1AnmZAv3rsX+Pnn1r5nD2zffYcCAiz38EARN/dyAuamRSa9ulcv5F5/
+        PRq4IZ1A21pDMr1zJ+r5nVYOtUpu4iRmTcCzO/q6oHXehEQESRSyE9iZhRqWliM5GfjpJ+D771s7X7el
+        puIUN3+poiDniiuQQeCVXl7IZkYb4uKcANv87A8/ANu3o+6DD5yDzPz110juDvgWm08Sen65gRu7iQTM
+        jKJj3TpAaphgWzmzYEtIQA4JnyaJCvoJzol69nUB2OZntmwBNm1CzeTJsHAim1m6m7nZYz08NnQLfIuF
+        9e2rj7n6ahiY1gZORjMj7JBSSEoCCLaVp6TAtno1stltMrgX6tlBBGCb9yYmwsHrWa5d+8ILMH38MTZT
+        QhD89h4B32LhbI16DqucCRPQwI5QyazYv/0WECIrVwKrVp1zeb52LZoWLUJjeDggGWvrHpLEmjWofuUV
+        1FDlVrzzDpJDQhDn5XVhG7azFq7Ther5BXmMVD0zUkG3R0UBsbGAkDnf2f6wYkXb7y1b5vRKKRlOYyNV
+        aDI7VZy3d/dq3p1FkMRS1rSBEavltYyb3C7Dhu0OkZHNLqTac3mfmRE3clhWUa4YeQZI5gC86OBbLCIg
+        YMFyZqKIkTvLqJVwONlnzQKkXERDdeRsjeLlzzwD4x13wMxD0uYBA7DiUoEXm60onlH+/rHLGbVcSoIq
+        XoWE7bPPnGNftIvTOUmd3vKcJB28lpN4OWVKGZVoKqc2Rdr2OEXxcS1/aSw6IGAeZTHSKeZq2fJOsV3W
+        sZ7tHEL49FPgiy+AL79sdsoBec3Os0U9dX4+u0w1ZXoJpfhaCsE4X98E17KXxqJ4hqU8aMqkpqnnhC4g
+        +DxO3zwfH+QRUIHoHc6MIs4CAyezgdd8ttRc7pkcaQIcUKfYxcw8zJx5+mkkaLW2Vd7eXT7ZXZA5z7A6
+        XV2mCD1qnyKCdxKg59ApF5FBP0Y/Qj9MTyO5dAq9E5QX2SyZPBLM5zwp4FCse+opZ0NYz6m95mKTEPCM
+        viWNR0krDzMyac8ncJL+Fz2dnkY/6umJ4yoVMpmZk9RE2dwvQqCABAyuLFnYjQzyawRJxnt6XhwSzjOs
+        v7/lMLuHlQpVtE5PEChmiZWwGzW8+ioMHGiJzMQ6RelZEs4zrE7XmDF+PJpGjEAFS0IIlNA7InCUfsQN
+        gdMkIAeiMvmhgMOs9N13kcx7SaLTZ+wOTa/VjudhpCmTCtHODVdF8OUE5o6ARL+QfpoE0twRGD4c5Q88
+        ACMPRVbKiTKeA1J5P1tT9zIRo9WOI4G6DLY+B8/IJgKqpIvC7IiARN9ACV3q64sSgi9lWaR3hgDbahUz
+        3PT++yhl603hnkjsKgkBH+XnV3f4rbeAsWNRw8hXE5g7AhL9YgI39emDTVLPBFGi1aKC4DM5N9wRqGaD
+        MDPTtk8+QTEHYyrP2hdMQvq8tMqj1Od47TVYCP4sgbnLgERfol1BCb25d2/EqtXbV2o06xNJwsDXKqlm
+        s9wRGDkSZrbVGmYcc+fiNCf3P9l+NyrKgk5Na72//6glQUFIpy7Hm2+ikaDq6O4I5NLLGfUKDinZhCs0
+        GtE2XrLmKrU6dD0jWUTgJgLP4UCTadwRgVq2VsuYMU59VUYRuI0ZTFaUqU6QHVmURrNzD1sapkxBE0HV
+        090REBnhBE9JkcxrnErVSpit8fUN3cD9YOA9VdRBp+SU544Au14jHYsXI4/SJMnD4z+u5dq3SLU67bD8
+        LsQJaSUwdwSk0xiZ4moCSeG1LfAtFs9JmyibetgwmNg6C3kwkjnglgDBl1Oup3h5MdFuLNrPb04Cp6NJ
+        ZC+Pjh0RKKZXBQbCTEG3hWUXq1K5PcOuI4kUlpP0/bNsm0X8jnYJsHnI76PWjRuxj6qX+2C9a5n2LS4g
+        QBujVu/YKFGiNHYw3bUEej6BM/KcusZEQbZFJLFK1ekz7DoPD30qM1HGiV5DaV1CZdrWJm7iTGjksXM/
+        RSM70fEURRnqWqJjWzRokEb+XFjPeq1gK7OxVv+XQBm9lpvVyJaXzMiLHL7QM6wMqRSq12L2fQuPqJKR
+        vwmwfGUq17P2d7HEGPlfCX6g66OdM/lTQf5ckD8ZzNTxVsphmQNGuoVnYSMjlMzWKOA7G/nzTfp7Kkmc
+        ZsQbWOsV8vOkEJowwfljwC5mfwPBc/3+ro9cmAmJpSSRSvBmqUVe5d8ZI9tbEsumO+BbTEhs5ewoJwEr
+        23bdyy/DytLdz7KSyHcZfIs5Sfj47NhE4Kd44srnGXaT/PTRg2dYGVLbSCKPWT3z9tvYx5IlsfQtijLA
+        dUv3jKevPtykkZyqxzmUjq9Uqeb1FHgxruWVpCjT6AdZ6ydIKJ6Ph7jevmyX7bK1a4ryXzmn8nP/tS4x
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
